--- a/CSS.css
+++ b/CSS.css
@@ -2,10 +2,17 @@ body {
    background-color: lightblue;
 }
 
+
+
+
+ 
+
 h1 {
-    color: #00ff00;
+    color: dodgerblue ;
+    
+    text-align: center
 }
 
 p {
-    color: rgb(0,0,255);
+    color: chartreuse;
 }
