--- a/CSS.css
+++ b/CSS.css
@@ -3,7 +3,16 @@ body {
 }
 
 
-
+.button { /* clase general */
+  border: 1px solid #dedede;
+  background: #f5f5f5;
+  border-radius: 3px;
+  color: deepskyblue;
+  display: inline-block;
+  font: bold 12px/12px HelveticaNeue, Arial;
+  padding: 8px 11px;
+  text-decoration: none;
+}
 
  
 
