--- a/CSS.css
+++ b/CSS.css
@@ -4,9 +4,9 @@ body {
 
 
 .button { /* clase general */
-  border: 1px solid #dedede;
+  border: 1px solid #0D0C0C;
   background: #f5f5f5;
-  border-radius: 3px;
+  border-radius: 5px;
   color: deepskyblue;
   display: inline-block;
   font: bold 12px/12px HelveticaNeue, Arial;
